<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_register">

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.secretfriend.ui.register.RegisterFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_assignment"
        android:name="com.example.secretfriend.ui.Assignment.AssignmentFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_assignment" />

    <fragment
        android:id="@+id/navigation_information"
        android:name="com.example.secretfriend.ui.Information.InformationFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_information" />
</navigation>